A little more planning and work with ranking aspect of the matching algorithm

--- a/matching-algo/matching-algo.ipynb
+++ b/matching-algo/matching-algo.ipynb
@@ -13,6 +13,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Main Idea:\n",
+    "* Extract data for user - Ranked choices, Past experience descriptions, past job titles\n",
+    "* Extract data for job posting - company's ranked choices, job description, job title\n",
+    "* TFIDF for experience/job description and or past job titles/job title\n",
+    "* Ranked choicing comparisons for each question\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extract Data for a User"
    ]
   },
@@ -511,6 +523,70 @@
     "print(get_score(to_string(job_required_skills), to_string(resume_skills[0])))\n",
     "print(get_score(to_string(job_required_skills), to_string(resume_skills[1])))\n",
     "print(get_score(to_string([stemmer.stem(word) for word in job_required_skills]), to_string(filtered_list)))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ranked Choices Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spearman's rank correlation coefficient: 1.00\n",
+      "Spearman's rank correlation coefficient: 0.79\n",
+      "Spearman's rank correlation coefficient: 0.62\n",
+      "Spearman's rank correlation coefficient: -0.33\n",
+      "Spearman's rank correlation coefficient: 0.29\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define the shared answer choices and their rankings for applicants and job postings\n",
+    "answer_choices = [\"Startup\", \"Mid-sized\", \"Big company\"]\n",
+    "applicant_rankings1 = [\"Startup\", \"Mid-sized\", \"Big company\"]\n",
+    "applicant_rankings2 = [\"Startup\", \"Big company\", \"Mid-sized\"]\n",
+    "applicant_rankings3 = [\"Mid-sized\", \"Startup\", \"Big company\"]\n",
+    "applicant_rankings5 = [\"Big company\", \"Startup\", \"Mid-sized\"]\n",
+    "applicant_rankings4 = [\"Big company\", \"Mid-sized\", \"Startup\"]\n",
+    "\n",
+    "job_rankings = [\"Startup\", \"Mid-sized\", \"Big company\"]\n",
+    "# job_rankings = [\"Mid-sized\", \"Big company\", \"Startup\"]\n",
+    "\n",
+    "\n",
+    "# Define a function to calculate Spearman's rank correlation coefficient\n",
+    "def spearman_rank_correlation(rankings1, rankings2):\n",
+    "    n = len(rankings1)\n",
+    "    ranked_diffs = [((rankings1[i] - rankings2[i])**2) / (i+1) for i in range(n)]\n",
+    "    # print(\"ranked diffs\", ranked_diffs)\n",
+    "    # print(sum(ranked_diffs))\n",
+    "    # print(\"previous\", 1 - (6 * sum(ranked_diffs)) / (n * (n**2 - 1)))\n",
+    "    # ranked_diffs = np.multiply(ranked_diffs, weightings)\n",
+    "    # print(sum(ranked_diffs))\n",
+    "    return 1 - (6 * sum(ranked_diffs)) / (n * (n**2 - 1))\n",
+    "\n",
+    "# Compute the Spearman's rank correlation coefficient between the rankings of shared answer choices\n",
+    "# shared_rankings1 = [answer_choices.index(choice) for choice in applicant_rankings]\n",
+    "# shared_rankings2 = [answer_choices.index(choice) for choice in job_rankings]\n",
+    "\n",
+    "for applicant_rankings in [applicant_rankings1, applicant_rankings2, applicant_rankings3, applicant_rankings4, applicant_rankings5]:\n",
+    "    shared_rankings1 = [applicant_rankings.index(choice) for choice in job_rankings]\n",
+    "    # shared_rankings2 = [job_rankings.index(choice) for choice in answer_choices]\n",
+    "    shared_rankings2 = [*range(len(job_rankings))]\n",
+    "\n",
+    "    correlation = spearman_rank_correlation(shared_rankings1, shared_rankings2)\n",
+    "    print(f\"Spearman's rank correlation coefficient: {correlation:.2f}\")"
    ]
   }
  ],
