--- a/matching-algo/matching-algo.ipynb
+++ b/matching-algo/matching-algo.ipynb
@@ -30,15 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe kernel failed to start as the Python Environment '.venv' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# This can be done with our backend API calls\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# from backend import applicant_answer, applicant_question\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n\u001b[1;32m      6\u001b[0m USER_NUM \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m      7\u001b[0m BASE_API_URL \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mhttp://localhost:8000\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
      ]
     }
    ],
@@ -420,25 +423,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Applicant 1: I am a software engineer with experience in Python and machine learning.\n",
-      "\tTop job match 1: Q (similarity score: 0.42)\n",
-      "\n",
-      "Applicant 2: I am a software engineer with experience in web development and C#.\n",
-      "\tTop job match 1: Q (similarity score: 0.46)\n",
-      "\n",
-      "Applicant 3: I have worked as a project manager for 5 years and have experience in Agile methodologies.\n",
-      "\tTop job match 1: Q (similarity score: 0.26)\n",
-      "\n",
-      "Applicant 4: I am a marketing specialist with expertise in social media and digital marketing.\n",
-      "\tTop job match 1: Q (similarity score: 0.26)\n"
+     "ename": "NameError",
+     "evalue": "name 'job_description' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 19\u001b[0m\n\u001b[1;32m      5\u001b[0m applicant_answers \u001b[39m=\u001b[39m [\n\u001b[1;32m      6\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mI am a software engineer with experience in Python and machine learning.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      7\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mI am a software engineer with experience in web development and C#.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      8\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mI have worked as a project manager for 5 years and have experience in Agile methodologies.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      9\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mI am a marketing specialist with expertise in social media and digital marketing.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m ]\n\u001b[1;32m     13\u001b[0m \u001b[39m# job_descriptions = [\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39m#     \"Software Engineer - Python and Machine Learning\",\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39m#     \"Project Manager - Agile Methodologies\",\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[39m#     \"Marketing Specialist - Social Media and Digital Marketing\",\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[39m#     \"Data Analyst - SQL and Data Visualization\"\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[39m# ]\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m job_description2 \u001b[39m=\u001b[39m [job_description]\n\u001b[1;32m     21\u001b[0m \u001b[39m# Vectorize the texts using TF-IDF\u001b[39;00m\n\u001b[1;32m     22\u001b[0m tfidf_vectorizer \u001b[39m=\u001b[39m TfidfVectorizer()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'job_description' is not defined"
      ]
     }
    ],
@@ -526,6 +522,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job_description = \"\"\"Qualifications:\n",
+    "Must be currently pursuing a B.A. or B.S. in Computer Science or similar engineering program with strong academic performance.\n",
+    "Self-starter, analytical, tenacious problem solver.\n",
+    "Strong verbal and written communication skills.\n",
+    "Rigorous attention to detail and focus on quality of deliverables.\n",
+    "Proven team experience and comfort in a team-oriented environment.\n",
+    "Passion for working with technology and excitement for creating high quality consumer technology products.\n",
+    "NET C#, WebApi and SQL Server.\n",
+    "Responsibilities:\n",
+    "The Software Engineering Intern's primary job responsibilities will include:\n",
+    "Analyzing functional requirements and product specifications.\n",
+    "Researching, adopting, and integrating new technologies.\n",
+    "Innovating and improving existing products.\n",
+    "Writing coherent, organized code.\n",
+    "Taking ownership of projects to ensure their successful completion with respect to deadlines.\n",
+    "Collaborating with Quality Assurance in developing a test plan to ensure successful deployment of updates.\n",
+    "Benefits:\n",
+    "Gain well rounded experience: Alarm.com offers a diverse and dynamic environment where you will get the chance to work directly with full-time employees and learn about multiple areas of the business.\n",
+    "Focus on fun: Alarm.com places high value on our team culture.\"\"\""
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -535,18 +558,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Startup', 'Mid-sized', 'Big company']\n",
+      "['Startup', 'Mid-sized', 'Big company']\n",
       "Spearman's rank correlation coefficient: 1.00\n",
-      "Spearman's rank correlation coefficient: 0.79\n",
-      "Spearman's rank correlation coefficient: 0.62\n",
-      "Spearman's rank correlation coefficient: -0.33\n",
-      "Spearman's rank correlation coefficient: 0.29\n"
+      "['Startup', 'Mid-sized', 'Big company']\n",
+      "['Startup', 'Big company', 'Mid-sized']\n",
+      "Spearman's rank correlation coefficient: 0.90\n",
+      "['Startup', 'Mid-sized', 'Big company']\n",
+      "['Mid-sized', 'Startup', 'Big company']\n",
+      "Spearman's rank correlation coefficient: 0.81\n",
+      "['Startup', 'Mid-sized', 'Big company']\n",
+      "['Big company', 'Mid-sized', 'Startup']\n",
+      "Spearman's rank correlation coefficient: 0.33\n",
+      "['Startup', 'Mid-sized', 'Big company']\n",
+      "['Big company', 'Startup', 'Mid-sized']\n",
+      "Spearman's rank correlation coefficient: 0.65\n"
      ]
     }
    ],
@@ -558,8 +591,8 @@
     "applicant_rankings1 = [\"Startup\", \"Mid-sized\", \"Big company\"]\n",
     "applicant_rankings2 = [\"Startup\", \"Big company\", \"Mid-sized\"]\n",
     "applicant_rankings3 = [\"Mid-sized\", \"Startup\", \"Big company\"]\n",
-    "applicant_rankings5 = [\"Big company\", \"Startup\", \"Mid-sized\"]\n",
     "applicant_rankings4 = [\"Big company\", \"Mid-sized\", \"Startup\"]\n",
+    "applicant_rankings5 = [\"Big company\", \"Startup\", \"Mid-sized\"]\n",
     "\n",
     "job_rankings = [\"Startup\", \"Mid-sized\", \"Big company\"]\n",
     "# job_rankings = [\"Mid-sized\", \"Big company\", \"Startup\"]\n",
@@ -569,11 +602,6 @@
     "def spearman_rank_correlation(rankings1, rankings2):\n",
     "    n = len(rankings1)\n",
     "    ranked_diffs = [((rankings1[i] - rankings2[i])**2) / (i+1) for i in range(n)]\n",
-    "    # print(\"ranked diffs\", ranked_diffs)\n",
-    "    # print(sum(ranked_diffs))\n",
-    "    # print(\"previous\", 1 - (6 * sum(ranked_diffs)) / (n * (n**2 - 1)))\n",
-    "    # ranked_diffs = np.multiply(ranked_diffs, weightings)\n",
-    "    # print(sum(ranked_diffs))\n",
     "    return 1 - (6 * sum(ranked_diffs)) / (n * (n**2 - 1))\n",
     "\n",
     "# Compute the Spearman's rank correlation coefficient between the rankings of shared answer choices\n",
@@ -586,7 +614,9 @@
     "    shared_rankings2 = [*range(len(job_rankings))]\n",
     "\n",
     "    correlation = spearman_rank_correlation(shared_rankings1, shared_rankings2)\n",
-    "    print(f\"Spearman's rank correlation coefficient: {correlation:.2f}\")"
+    "    print(job_rankings)\n",
+    "    print(applicant_rankings)\n",
+    "    print(f\"Spearman's rank correlation coefficient: {((correlation+1) / 2):.2f}\")"
    ]
   }
  ],
