Possibly finish algorithm

--- a/matching-algo/matching-algo.ipynb
+++ b/matching-algo/matching-algo.ipynb
@@ -423,18 +423,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'job_description' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 19\u001b[0m\n\u001b[1;32m      5\u001b[0m applicant_answers \u001b[39m=\u001b[39m [\n\u001b[1;32m      6\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mI am a software engineer with experience in Python and machine learning.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      7\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mI am a software engineer with experience in web development and C#.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      8\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mI have worked as a project manager for 5 years and have experience in Agile methodologies.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m      9\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mI am a marketing specialist with expertise in social media and digital marketing.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m ]\n\u001b[1;32m     13\u001b[0m \u001b[39m# job_descriptions = [\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39m#     \"Software Engineer - Python and Machine Learning\",\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[39m#     \"Project Manager - Agile Methodologies\",\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[39m#     \"Marketing Specialist - Social Media and Digital Marketing\",\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[39m#     \"Data Analyst - SQL and Data Visualization\"\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[39m# ]\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m job_description2 \u001b[39m=\u001b[39m [job_description]\n\u001b[1;32m     21\u001b[0m \u001b[39m# Vectorize the texts using TF-IDF\u001b[39;00m\n\u001b[1;32m     22\u001b[0m tfidf_vectorizer \u001b[39m=\u001b[39m TfidfVectorizer()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'job_description' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Applicant 1: I am a software engineer with experience in Python and machine learning.\n",
+      "\tTop job match 1: Q (similarity score: 0.42)\n",
+      "\n",
+      "Applicant 2: I am a software engineer with experience in web development and C#.\n",
+      "\tTop job match 1: Q (similarity score: 0.46)\n",
+      "\n",
+      "Applicant 3: I have worked as a project manager for 5 years and have experience in Agile methodologies.\n",
+      "\tTop job match 1: Q (similarity score: 0.26)\n",
+      "\n",
+      "Applicant 4: I am a marketing specialist with expertise in social media and digital marketing.\n",
+      "\tTop job match 1: Q (similarity score: 0.26)\n"
      ]
     }
    ],
@@ -477,6 +484,51 @@
     "        job = job_description2[job_index][0]\n",
     "        similarity = similarity_scores[i, job_index]\n",
     "        print(f\"\\tTop job match {j+1}: {job} (similarity score: {similarity:.2f})\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 3 4]\n",
+      " [4 3 2]]\n",
+      "[0.44665616 0.         0.         0.3158336  0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "job_description2 = [\"Software Engineer\", \"Marketing Director\", \"Financial Advisor\", \"Software Developer\", \"Head of Social Media\"]\n",
+    "\n",
+    "applicant_jobs = [\"Software Engineer Intern\", \"Data Science Intern\"]\n",
+    "applicant_job2 = [\"Software Engineer Intern\", \"Software Developer\"]\n",
+    "applicant_job3 = [\"Social Media Intern\", \"Marketing Intern\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Vectorize the texts using TF-IDF\n",
+    "tfidf_vectorizer = TfidfVectorizer()\n",
+    "tfidf_applicant_answers = tfidf_vectorizer.fit_transform(applicant_jobs)\n",
+    "tfidf_job_descriptions = tfidf_vectorizer.transform(job_description2)\n",
+    "\n",
+    "# Compute the cosine similarity between each applicant answer and job description\n",
+    "similarity_scores = cosine_similarity(tfidf_applicant_answers, tfidf_job_descriptions)\n",
+    "\n",
+    "# Get the top job matches for each applicant\n",
+    "top_job_matches = similarity_scores.argsort(axis=1)[:,::-1][:,:3]\n",
+    "print(top_job_matches)\n",
+    "\n",
+    "similarity_scores[:, 0]\n",
+    "\n",
+    "# Print the results\n",
+    "# for j, job_index in enumerate(top_job_matches):\n",
+    "#     job = job_description2[job_index]\n",
+    "#     similarity = similarity_scores[:, job_index]\n",
+    "#     print(f\"\\tTop job match {j+1}: {job} (similarity score: {similarity:.2f})\")"
    ]
   },
   {
@@ -594,6 +646,7 @@
     "applicant_rankings4 = [\"Big company\", \"Mid-sized\", \"Startup\"]\n",
     "applicant_rankings5 = [\"Big company\", \"Startup\", \"Mid-sized\"]\n",
     "\n",
+    "job = [''] * 3\n",
     "job_rankings = [\"Startup\", \"Mid-sized\", \"Big company\"]\n",
     "# job_rankings = [\"Mid-sized\", \"Big company\", \"Startup\"]\n",
     "\n",
@@ -617,6 +670,50 @@
     "    print(job_rankings)\n",
     "    print(applicant_rankings)\n",
     "    print(f\"Spearman's rank correlation coefficient: {((correlation+1) / 2):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Startup', 'Mid-sized', 'Big company']\n"
+     ]
+    }
+   ],
+   "source": [
+    "job = [''] * 3\n",
+    "job_d = {\"Big company\": 3, \"Startup\": 1, \"Mid-sized\": 2}\n",
+    "job_rankings = [\"Startup\", \"Mid-sized\", \"Big company\"]\n",
+    "\n",
+    "for des, rank in job_d.items():\n",
+    "    job[rank-1] = des\n",
+    "\n",
+    "print(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[], [], [], [], [], [], [], [], [], []]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ [] for _ in range(10)]"
    ]
   }
  ],
